# PET

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
assets/pet/: 16070-30290-cat-in-the-dark.riv  README.md
desktop/: LICENSE  README.md  UPSTREAM.md  package.json  tsconfig.json  tsconfig.tests.json
desktop/src/: character-rig.ts  click-handoff.ts  coordinates.ts  debug-overlay.ts  debug-preload.cjs  facing-stabilizer.ts  generator-bridge.ts  geometry.ts  logger.ts  main.ts  motion-controller.ts  motion-safety.ts  pet-window.ts  preload.cjs  protocol.ts  surface-attachment.ts  surface-tracker.ts  tray.ts  window-tracker-latch.ts
desktop/tests/: character-rig.test.ts  generator-bridge.test.ts  motion-safety.test.ts  protocol.test.ts  renderer.test.ts  surfaces.test.ts  (+3 more)
docs/: architecture.md  automatic-2d-sprite-warp.md  milestone-1-acceptance.md  neural-motion-model.md  skeletal-animation-design.md  verification-2026-07-20.md
environment/: README.md  constraints.txt  requirements.lock.txt  requirements.txt  smoke_test.py
services/generator/: .gitignore  README.md  pyproject.toml  run.py
services/generator/examples/: smoke_input.ndjson
services/generator/pet_generator/: __init__.py  backend.py  character_animation.py  character_rig.py  cli.py  data_gen.py  planner.py  protocol.py  service.py  simulator.py  state.py
services/generator/tests/: __init__.py  helpers.py  test_character_animation.py  test_character_rig.py  test_cli.py  test_planner.py  test_protocol.py  test_service.py  test_simulator.py
tests/: __init__.py
(+45 files in other folders)
